# gregschmit.com

./: .editorconfig  .gitignore  .ruby-gemset  CNAME  Dockerfile  Gemfile  LICENSE  README.md  humans.txt  index.html  locustfile.py  manage.py  package-lock.json  package.json  pyproject.toml
.github/workflows/: pipeline.yml
.kamal/hooks/: pre-deploy
assets/: gns-qh-ssh-pub.pem.txt  gns-teamup-ssh-pub.pem.txt  gregschmit-pgp-pub.asc.txt  gregschmit-ssh-pub.pem
config/: deploy.yml  supervisor.conf
css/: greg.css
frontend/: urls.py  views.py
frontend/static/: gns-id_ed25519.pub  gns-id_rsa_rxg2.pub  gns-pgp.pub
frontend/templates/frontend/: home.html
gregschmit/: asgi.py  wsgi.py
gregschmit/settings/: __init__.py  crypt.py  production.py
