[tool.poetry]
name = "gregschmit-com"
version = "0.1.0"
description = ""
authors = ["Gregory N. Schmit <schmitgreg@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
black = "^24.4.0"
django = "^5.1.4"
psycopg = "^3.1.19"
daphne = "^4.1.2"
whitenoise = {extras = ["brotli"], version = "^6.6.0"}
locust = "^2.27.0"

[tool.poetry.group.dev.dependencies]
poetry = "^1.8.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
